# FUT-ROBO

./: README.md  manager.py
Comunicacao/: esp32-mqtt.c  python-mqtt.py
Hardware/fut-robo/: .cproject  sdkconfig
Hardware/fut-robo/main/: CMakeLists.txt  main.c
Integracao/: futrobo.py  viscomp.py
Integracao/data/: amarelo_lower_hsv.npy  amarelo_upper_hsv.npy  azul_lower_hsv.npy  azul_upper_hsv.npy  calibration.npy  laranja_lower_hsv.npy  laranja_upper_hsv.npy  rosa_lower_hsv.npy  rosa_upper_hsv.npy  verde_lower_hsv.npy  verde_upper_hsv.npy
Integracao/src/: ball.py  color.py  robot.py  viscomp.py
Visao/: coef_calc.py  new_viscomp.py  viscomp-FUTROBO.py
Visao/cpp/: .gitignore  CMakeLists.txt  amarelo.yaml  azul.yaml  calib.yaml  config.yaml  flake.nix  laranja.yaml  rosa.yaml  verde.yaml
Visao/cpp/include/: Calibration.hpp  Color.hpp  Publisher.hpp  Team.hpp  Video.hpp  file_util.hpp
Visao/cpp/include/futbot/: Ball.hpp  Calibration.hpp  Color.hpp  Publisher.hpp  Team.hpp  Video.hpp
Visao/cpp/src/: Ball.cpp  Calibration.cpp  Color.cpp  Publisher.cpp  Team.cpp  Video.cpp  main.cpp
Visao/new_viscomp/: main.py
Visao/new_viscomp/data/: calibration.npy  laranja_lower_hsv.npy  laranja_upper_hsv.npy
Visao/new_viscomp/src/: ball.py  calibration.py  color.py  publisher.py  robot.py  util.py  video.py  viscomp.py
Visao/testes/: save-pic.py  segmentacao.py  view.py  viscomp-FUTROBO.py
hardware/fut-robo/: .gitignore  .project
hardware/fut-robo/main/: main.c
vision/: CMakeLists.txt  config.yaml
vision/data/: amarelo.yaml  laranja.yaml  verde.yaml
vision/include/futbot/: Ball.hpp  Calibration.hpp  Roi.hpp  Video.hpp
vision/src/: Ball.cpp  Calibration.cpp  Color.cpp  Roi.cpp  Team.cpp  Video.cpp  main.cpp
vision/test/: save-video.py
